--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(get_ndc_status)
 export(get_remapped_rxcui)
 export(get_rx)
 export(get_rxcui_status)
+export(get_rxcui_strength)
 export(get_who)
 export(subset_atc)
